--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,6 +108,9 @@ main {
 
 #sinLlenar {
     color: red;
+    animation-name: vibracion;
+    animation-duration: 0.3s;
+    animation-iteration-count: 0.3s;
 }
 
 #formulario input[type="text"], #formulario input[type="number"] {
@@ -132,28 +135,4 @@ main {
 
 .clave {
     font-weight: bold;
-}
-
-@media only screen and (max-width: 1200px) {
-    #respuesta {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media only screen and (max-width: 930px) {
-    #respuesta {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media only screen and (max-width: 700px) {
-    #respuesta {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media only screen and (max-width: 450px) {
-    #respuesta {
-        grid-template-columns: 1fr;
-    }
 }
