--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,20 +43,24 @@ header h1, header p {
     margin: 0 auto;
 }
 
-input[type="button"] {
+.btn {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    background-color: #f8f8f8;
     border: 1px solid rgb(114, 114, 114);
     padding: 10px;
     border-radius: 4px;
     margin: 10px 5px
 }
 
-input[type="button"]:hover {
+.btn:hover {
     cursor: pointer;
     background-color: rgb(251, 209, 43);
     border: 1px solid rgb(175, 141, 1);
 }
 
-input[type="button"]:active {
+.btn:active {
     background-color: rgb(248, 190, 14);
     border: 1px solid rgb(132, 105, 0);
 }
