--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 .up {
-    display: grid;
+    display: none;
     place-items: center;
     background-color: #fff;
     width: 50px;
@@ -24,11 +24,16 @@ html, body {
     text-align: center;
     text-decoration: none;
     color: #000;
+    border: 2px solid #434343;
 }
 
 .up:hover {
     cursor: pointer;
-    border: 2px solid #434343;
+}
+
+.up:active {
+    background-color: #434343;
+    color: #fff;
 }
 
 header {
