--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,7 +130,7 @@ main {
 }
 
 .libro {
-    border: 1px solid black;
+    border: 1px solid rgb(230, 229, 229);
     display: grid;
     place-content: center;
     grid-template-columns: 1fr 2fr;
@@ -140,6 +140,8 @@ main {
     height: 200px;
     padding: 0 15px;
     gap: 10px;
+    border-radius: 4%;
+    box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.499);
 }
 
 .clave {
