--- a/styles/mediaQuery.css
+++ b/styles/mediaQuery.css
@@ -17,6 +17,10 @@
 }
 
 @media only screen and (max-width: 450px) {
+    .btn p {
+        display: none;
+    }
+
     #respuesta {
         grid-template-columns: 1fr;
     }
